fix: correção de visibilidade do último item da tabela no list-full

--- a/front/src/app/@theme/components/list-full/list-full.component.scss
+++ b/front/src/app/@theme/components/list-full/list-full.component.scss
@@ -17,6 +17,7 @@ h2 {
 
 .table {
     padding-right: 1.8rem;
+    padding-bottom: 40px;
     overflow-y: scroll;
   
     height: calc(78vh - 1rem);
